<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imgUN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:minWidth="10dp"
        android:maxWidth="10dp"
        android:maxHeight="10dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgUN"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/imgUN"
        android:text="@string/Username_img_owner" />

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgUN"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvLikesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgPhoto"
        android:text="@string/likes_count" />

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvLikesCount"
        android:text="@string/caption_default_text" />

    <TextView
        android:id="@+id/tvPostedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvUN"
        android:layout_alignBottom="@+id/tvUN"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:text="@string/posted_time" />

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvCaption"
        android:text="@string/tvComment" />

</RelativeLayout>
